@@ -1,4 +1,4 @@
-/* Copyright (C) 2004 Bart
+/* Copyright (C) 2004, 2005, 2006, 2007, 2008 Bart Hakvoort
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -117,13 +117,15 @@ void Dialog_Base_Partition::Set_Resizer( bool extended )
 }
 
 Partition Dialog_Base_Partition::Get_New_Partition() 
-{ 	
+{
+	//FIXME:  Partition size is limited is just less than 1024 TeraBytes due
+	//        to the maximum value of signed 4 byte integer.
 	if ( ORIG_BEFORE != spinbutton_before .get_value_as_int() )
-		selected_partition .sector_start = START + spinbutton_before .get_value_as_int() * MEBIBYTE ;	
+		selected_partition .sector_start = START + Sector(spinbutton_before .get_value_as_int()) * MEBIBYTE ;	
 	
 	if ( ORIG_AFTER != spinbutton_after .get_value_as_int() )
 		selected_partition .sector_end = 
-			selected_partition .sector_start + spinbutton_size .get_value_as_int() * MEBIBYTE ;
+			selected_partition .sector_start + Sector(spinbutton_size .get_value_as_int()) * MEBIBYTE ;
 
 	//due to loss of precision during calcs from Sector -> MiB and back, it is possible
 	//the new partition thinks it's bigger then it can be. Here we solve this.
